/*
Copyright 2023 The Dapr Authors
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
    http://www.apache.org/licenses/LICENSE-2.0
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

package dapr.proto.components.v1;

import "dapr/proto/components/v1/common.proto";
import "google/protobuf/any.proto";

option go_package = "github.com/dapr/dapr/pkg/proto/components/v1;components";

// Interface for conversation.
service Conversation {
    // Initializes the secret store with the given metadata.
    rpc Init(ConversationInitRequest) returns (ConversationInitResponse) {}

    // Converse with a LLM service
    rpc Converse(ConversationRequest) returns (ConversationResponse) {}

    // Ping the pubsub. Used for liveness porpuses.
    rpc Ping(PingRequest) returns (PingResponse) {}
}

// Request to initialize the conversation.
message ConversationInitRequest {
    MetadataRequest metadata = 1;
}

// Response from initialization.
message ConversationInitResponse {}

// ConversationRequest is the request object for Conversation.
message ConversationRequest {
    // Inputs for the conversation, support multiple input in one time.
    repeated ConversationInput inputs = 1;

    // Parameters for all custom fields.
    map<string, google.protobuf.Any> parameters = 2;

    // The ID of an existing chat (like in ChatGPT)
    optional string conversationContext = 3;

    // Temperature for the LLM to optimize for creativity or predictability
    optional double temperature = 4;

    optional string key = 5;

    optional string model = 6;

    repeated string endpoints = 7;

    optional string policy = 8;
}

message ConversationInput {
    // The message to send to the llm
    string message = 1;

    // The role to set for the message
    optional string role = 2;
}

// ConversationResult is the result for one input.
message ConversationResult {
    // Result for the one conversation input.
    string result = 1;
    // Parameters for all custom fields.
    map<string, google.protobuf.Any> parameters = 2;
}

// ConversationResponse is the response for Conversation.
message ConversationResponse {
    // The ID of an existing chat (like in ChatGPT)
    optional string conversationContext = 1;

    // An array of results.
    repeated ConversationResult outputs = 2;
}
