/*
Copyright 2022 The Dapr Authors
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
    http://www.apache.org/licenses/LICENSE-2.0
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

package dapr.proto.components.v1;

import "dapr/proto/components/v1/common.proto";

option go_package = "github.com/dapr/dapr/pkg/proto/components/v1;components";

// Interface for secret store.
service SecretStore {
  // Get all secrets in the store.
  rpc BulkGetSecret(BulkGetSecretRequest) returns (BulkGetSecretResponse) {}
  
  // Returns a list of implemented secret store features.
  rpc Features(FeaturesRequest) returns (FeaturesResponse) {}

  // Get an individual secret from the store.
  rpc GetSecret(GetSecretRequest) returns (GetSecretResponse) {}
    
  // Initializes the secret store with the given metadata.
  rpc Init(InitRequest) returns (InitResponse) {}
}

// Request for getting all secrets from the store.
message BulkGetSecretRequest {
  // The optional get metadata.
  map<string, string> metadata = 1;
}

// Response from getting all secrets from the store.
message BulkGetSecretResponse {
    // The secrets returned from the store.
    map<string, GetSecretResponse> secrets = 1;
}

// Request for getting a secret from the store.
message GetSecretRequest {
  // The secret name.
  string name = 1;
  // The optional get metadata.
  map<string, string> metadata = 2;
}

// Response from getting a secret from the store.
message GetSecretResponse {
  // The name and value pairs of secrets returned from the store.
  map<string, string> values = 1;
}
